got the blinds button working and did some styling. added icons to cancel and add buttons. betting the pot now updates the current bet. not sure if I like the colors of the add and cancel buttons though.

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,4 +1,16 @@
 page-home {
+
+    ion-icon {
+        font-size: 35px;
+    }
+
+    #cancel {
+        background-color: #ff6666;
+    }
+
+    #add {
+        background-color: #33825e;
+    }
     
     #betDisplay{
         height: 90px;
@@ -51,7 +63,7 @@ page-home {
         margin-top: -2px;
         color: white;
     }
-    #splitPotText{
+    .secondaryDisplayText{
         color: grey;
         margin-top: 30px;
     }
