--- a/src/pages/split/split.scss
+++ b/src/pages/split/split.scss
@@ -1,3 +1,22 @@
-page-list {
+page-split {
+    ion-card{
+        height: 100%; 
+    }
+    .headerText{
+        font-size: 3em;
+    }
+
+    .contentText{
+        font-size: 2em;
+    }
+
+    .secondaryContent{
+        margin-top: 40px;
+    }
+
+    ion-icon{
+        font-size: 35px;
+    }
+
 
 }
