--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,5 +1,30 @@
 page-home {
 
+    .playerTracker {
+        max-width: 100px!important;
+        min-width: 100px!important;
+      }
+
+      .trackerGrid {
+        margin-top: 33px;
+      }
+
+      .trackerButtons{
+        height: 3.2em !important;
+        margin-top: 8px !important;
+    }
+
+    #trackerTopButton {
+    }
+
+    .dealer {
+        border: solid red 5px !important;
+    }
+
+    .actionOn {
+        background-color: #33825e !important;
+    }
+
     ion-icon {
         font-size: 35px;
     }
@@ -13,11 +38,12 @@ page-home {
     }
     
     #betDisplay{
-        height: 90px;
+        height: 80px;
         background-color: black;
         border-radius: 10px;
         position: relative;
         overflow: hidden;
+        margin-top: 16px;
     }
     .bottomDisplay{  
         height: 70px;
@@ -30,7 +56,12 @@ page-home {
     #old-results{
         height: 70px;
     }
-    .button{
+
+    .callRow {
+        margin-right: 5px;
+    }
+
+    .middleButtons{
         height: 4.8em !important;
     }
 
@@ -41,8 +72,13 @@ page-home {
     #potBetButton{
         margin-top: 0px !important;
     }
-    .zeroRow{
+    .zeroRowButtons{
         margin-bottom: 0px !important;
+        height: 4.8em !important;
+    }
+
+    .zeroRow {
+        margin-right: 8px;
     }
     #primaryNumber{ 
         color: white;
@@ -51,7 +87,7 @@ page-home {
         bottom: 10px;
         right: 10px;
         bottom: 10px;
-        font-size: 40px !important;
+        font-size: 25px !important;
         margin: 0px;
     }
     #topDisplayText{
