--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -35,6 +35,10 @@ page-home {
         background-color: #33825e !important;
     }
 
+    .inactive {
+        background-color: lightblue;
+    }
+
     ion-icon {
         font-size: 35px;
     }
