Changed the style for actionOn to make it easier to see who the action is on. Also made the player tracker a little thinner to make it easier to hit buttons in the calculator area.

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -10,8 +10,8 @@ page-home {
     }
 
     .playerTracker {
-        max-width: 100px!important;
-        min-width: 100px!important;
+        max-width: 80px!important;
+        min-width: 80px!important;
       }
 
       .trackerGrid {
@@ -28,11 +28,12 @@ page-home {
     }
 
     .dealer {
-        border: solid black 4px !important;
+        border: dashed grey 4px !important;
     }
 
     .actionOn {
         background-color: #33825e !important;
+        border: solid black 4px !important;
     }
 
     .inactive {
