--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -113,7 +113,7 @@ page-home {
         bottom: 10px;
         right: 10px;
         bottom: 10px;
-        font-size: 25px !important;
+        font-size: 40px !important;
         margin: 0px;
     }
     #topDisplayText{
@@ -124,6 +124,17 @@ page-home {
     .bottomDisplayText{
         margin-top: -2px;
         color: white;
+    }
+
+    .bottomDisplayAmount{
+        color: white;
+        position: absolute;
+        right: 10px;
+        bottom: 10px;
+        right: 10px;
+        bottom: 10px;
+        font-size: 25px !important;
+        margin: 0px;
     }
     .secondaryDisplayText{
         color: grey;
